# game-racer

./: .gitignore  README.md  collect_data.bash  collect_data_backup.bash  evaluating.bash  foxglove_collect.json  foxglove_evaluate.json  foxglove_multi_car.json  stop_collect.sh  train_p_model.bash  train_q_model.bash  train_q_model_rel.bash
car_dynamics/controllers_jax/: __init__.py  waypoint.py
car_dynamics/models_jax/: dbm.py
car_ros/: CMakeLists.txt  package.xml
car_ros/n_wins/: ours_vs_mpc_vs_mpc_grad_rel.txt
car_ros/regrets/: ours_vs_mpc_vs_mpc_grad_rel.pkl
car_ros/scripts/: model_arch.py  mpc_controller.py  racing_blocking.py  racing_comp_blocking.py  rerun_races.py  train_p_model_multi_dist.py  train_q_model_multi.py  train_q_model_multi_rel.py
car_ros/tmp/: collect_data_node.py  ddrx_planner.py  df_traj.py  merge_data.py  mpc_controller.py  shift_local_traj.py  spline_fit.py  waypoint.py
config/: collect_args.yaml  evaluate_args.yaml  train_p_args.yaml  train_q_args.yaml  train_q_rel_args.yaml
ref_trajs/: berlin_2018-large.csv  berlin_2018-large_with_speeds.csv  berlin_2018.csv  berlin_2018_centerline.csv  berlin_2018_raceline_with_speeds.csv  berlin_2018_raceline_with_speeds1.csv  berlin_2018_with_speeds.csv  calculate_raceline.py  fill_deviations.py  handling_track.csv  modena_2019.csv  modena_2019_with_speeds.csv  render_speeds.py  rescale_tracks.py  rounded_rectangle.csv  rounded_rectangle_with_speeds.csv  track_with_speeds.csv  traj_rr_with_speeds.csv
sim_params/: berlin_2018-large.csv  car.urdf
